--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -3,25 +3,34 @@
 @tailwind utilities;
 
 body {
-  margin: 0;
+  width: 100%;
 }
-.container {
+
+.full-container {
   position: relative;
   overflow-y: auto;
   overscroll-behavior-y: contain;
   scroll-snap-type: y mandatory;
-  height: 100vh;
+  height: 100dvh;
   width: 100%;
   scroll-behavior: smooth;
-  scroll-behavior-duration: 2000ms; /* Ajusta la duración del desplazamiento según tus preferencias */
 }
 
-.container::-webkit-scrollbar {
+.full-container::-webkit-scrollbar {
   display: none;
 }
 
 .section {
   height: 100vh;
+  width: 100%;
   scroll-snap-align: start;
   scroll-snap-stop: always;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.active {
+  background-color: rebeccapurple;
 }
