--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -17,7 +17,7 @@ body {
 }
 
 .full-container::-webkit-scrollbar {
-  width: 2px;
+  width: 3px;
   background-color: rgb(163, 162, 162);
 }
 
@@ -31,7 +31,7 @@ body {
   pointer-events: none;
   background-color: transparent;
   background-clip: content-box;
-  background-color: #5d5555;
+  background-color: white;
 }
 
 .section {
@@ -50,19 +50,54 @@ body {
 }
 
 .bg-gradient-blue1 {
-  background: rgb(6, 0, 106);
+  background: rgb(212, 114, 114);
   background: linear-gradient(
     0deg,
-    rgba(6, 0, 106, 1) 35%,
-    rgba(4, 12, 156, 1) 70%
+    rgba(212, 114, 114, 1) 2%,
+    rgba(210, 78, 78, 1) 73%,
+    rgba(201, 60, 60, 1) 86%,
+    rgba(189, 55, 55, 1) 100%
   );
 }
 
 .bg-gradient-blue2 {
-  background: rgb(6, 0, 106);
+  background: rgb(212, 114, 114);
   background: linear-gradient(
     180deg,
-    rgba(6, 0, 106, 1) 35%,
-    rgba(4, 12, 156, 1) 70%
+    rgba(212, 114, 114, 1) 2%,
+    rgba(210, 78, 78, 1) 73%,
+    rgba(201, 60, 60, 1) 86%,
+    rgba(189, 55, 55, 1) 100%
   );
+}
+
+.text-shadow {
+  text-shadow: 1px 1px 2px black;
+}
+
+.phone-container {
+  height: 110%;
+  margin-top: -20px;
+}
+
+.phone,
+.phone img {
+  height: 100%;
+}
+
+.phone .notch-container {
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 4.25vh;
+  margin: 0 auto;
+  background-color: #111;
+  border-bottom-left-radius: 2.334vh;
+  border-bottom-right-radius: 2.334vh;
+}
+
+.phone img {
+  display: block;
+  border: 1.334vh solid #111;
+  border-radius: 4.5vh;
 }
