--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -77,12 +77,23 @@ body {
 
 .phone-container {
   height: 110%;
-  margin-top: -7.5%;
+  margin-top: -20px;
 }
 
 .phone,
 .phone img {
   height: 100%;
+}
+
+.phone .notch-container {
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 4.25vh;
+  margin: 0 auto;
+  background-color: #111;
+  border-bottom-left-radius: 2.334vh;
+  border-bottom-right-radius: 2.334vh;
 }
 
 .phone img {
