--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -104,3 +104,30 @@ body {
   border: 1.334vh solid #111;
   border-radius: 4.5vh;
 }
+
+.monitor img {
+  height: 100%;
+}
+
+.monitor {
+  width: 100%;
+  height: 32vh;
+  border: solid 0.5em #111;
+  border-radius: 0.5em;
+}
+
+.stand {
+  position: absolute;
+  width: 400px;
+}
+
+.stand:after {
+  content: "";
+  display: block;
+  position: relative;
+  background: #111;
+  border-top-left-radius: 0.5em;
+  border-top-right-radius: 0.5em;
+  width: 400px;
+  height: 12px;
+}
