--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -42,7 +42,7 @@ body {
 }
 
 .section {
-  height: 100vh;
+  height: 100dvh;
   width: 100%;
   scroll-snap-align: start;
   scroll-snap-stop: always;
