--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -85,7 +85,7 @@ body {
 
 .phone {
   height: 100%;
-  max-width: 260px;
+  max-width: 248px;
   display: block;
   border: 1.334vh solid #111;
   border-radius: 4.5vh;
@@ -103,7 +103,7 @@ body {
 }
 
 .monitor {
-  width: 26vw;
+  width: 100%;
   height: 32vh;
   border: solid 0.5em #111;
   border-radius: 0.5em;
